--- a/src/Components/Nav/nav.module.css
+++ b/src/Components/Nav/nav.module.css
@@ -6,4 +6,23 @@
 
 .active {
     color: green;
+    text-decoration: none;
+
+}
+
+.inactive {
+    color: black;
+    text-decoration: none;
+}
+
+.ul {
+    display: flex;
+    list-style-type: none;
+}
+
+.li {
+    padding: 10px;
+    color: black;
+    list-style: none;
+
 }
