--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,16 @@
 body {
   margin: 0;
   display: flex;
+  flex-direction: column;
   min-height: 100vh;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.routes-container {
+  flex-grow: 1;
 }
