--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -2,15 +2,16 @@
     font-family: "StarWars", sans-serif;
     color: black;
     background-color: rgb(217, 217, 217);
-    padding-top: 16px;
+    /* padding-top: 16px; */
     display: flex;
-    flex-grow: 1;
-    max-height: 100px;
+    flex-wrap: wrap;
+    min-height: 100px;
+    justify-content: center;
+    align-items: center;
 }
 
 @media screen and (min-width: 769px) {
     .header {
-        flex-direction: row;
         justify-content: space-between;
         align-items: center;
         padding: 0 32px;
