--- a/src/Components/Nav/nav.module.css
+++ b/src/Components/Nav/nav.module.css
@@ -1,5 +1,10 @@
 @import url(../../index.css);
 
+.nav {
+    display: flex;
+    align-items: center;
+}
+
 .test {
     background-color: var(--primary);
 }
@@ -18,6 +23,9 @@
 .ul {
     display: flex;
     list-style-type: none;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding: 0;
 }
 
 .li {
