--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,25 @@ body {
   flex-grow: 1;
 }
 
+.mainWrapper {
+  display: flex;
+  flex-grow: 1;
+
+}
+
+ul {
+  list-style: none;
+}
+
+main {
+  display: flex;
+  align-items: center;
+  width: 100vw;
+}
+
 .routes-container {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
