--- a/src/Components/Sidebar/sidebar.module.css
+++ b/src/Components/Sidebar/sidebar.module.css
@@ -1,3 +1,24 @@
 .sidebar {
-    width: 100px;
+    width: 150px;
+}
+
+.listItem {
+    padding: 32px;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.active {
+    color: green;
+    text-decoration: none;
+
+}
+
+.inactive {
+    color: black;
+    text-decoration: none;
 }
