--- a/src/Components/Sidebar/sidebar.module.css
+++ b/src/Components/Sidebar/sidebar.module.css
@@ -1,16 +1,29 @@
 .sidebar {
-    width: 150px;
-}
-
-.listItem {
-    padding: 32px;
+    display: flex;
+    background-color: rgb(235, 235, 235);
+    width: 100vw;
 }
 
 ul {
     list-style: none;
     padding: 0;
     margin: 0;
+    display: flex;
+    justify-content: space-evenly;
+    flex-grow: 1;
 }
+
+.submenu {
+    display: flex;
+    flex-direction: column;
+}
+
+.sublink {
+    text-decoration: none;
+    font-style: italic;
+}
+
+
 
 .active {
     color: green;
@@ -21,4 +34,24 @@ ul {
 .inactive {
     color: black;
     text-decoration: none;
+}
+
+@media screen and (min-width:768px) {
+    .sidebar {
+        min-width: 150px;
+        max-width: 150px;
+        flex-direction: row;
+        height: 100%;
+    }
+
+    .listItem {
+        padding: 32px;
+    }
+
+    ul {
+        flex-direction: column
+    }
+
+    ;
+
 }
